--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "typescript": "^5.5.4",
-    "vitest": "^2.0.5",
     "@eslint/js": "^9.9.0",
     "@types/eslint__js": "^8.42.3",
+    "@types/node": "^22.9.1",
     "eslint": "^9.9.0",
     "eslint-config-prettier": "^9.1.0",
     "prettier": "^3.3.3",
-    "typescript-eslint": "^8.2.0"
+    "tsx": "^4.19.2",
+    "typescript": "^5.5.4",
+    "typescript-eslint": "^8.2.0",
+    "vitest": "^2.0.5"
   }
 }
