--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "test": "vitest",
     "lint": "eslint src/*",
-    "prepare": "node esbuild.mjs"
+    "prepare": "node esbuild.mjs",
+    "format": "prettier -w src/*"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
